--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 *.iml
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
 .DS_Store
 /build
 /captures
+/.idea/
 # Built application files
 *.apk
 *.ap_
